--- a/cv/styles.css
+++ b/cv/styles.css
@@ -1,11 +1,15 @@
 body {
-    max-width: 950px;
+    max-width: 960px;
     margin:0 auto;
     padding: 40px 0;
-    font-family: Georgia;
+    font-family: Tahoma;
     background: url('images/crossword.png');
 }
 
+h1, h2, h3 {
+    font-family: Georgia;
+    line-height: 1.1;
+}
 .container {
     padding: 40px;
     background: #f5f5f5;
@@ -21,7 +25,7 @@ header {
 
 .link-doc {
     position: absolute;
-    bottom: 5px;
+    bottom: 10px;
 }
 
 .ico-social {
@@ -46,16 +50,12 @@ header {
 
 .content-data img {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 50px;
 }
 
 .content-me {
     display: inline-block;
     vertical-align: top;
-}
-
-.content-me h1{
-    margin-bottom: 20px;
 }
 
 .contact-info {
@@ -77,8 +77,13 @@ article > h2 {
     font-style: italic;
 }
 
-article .content-right{
+article .content-right {
     margin-left: 200px;
+    font-family: Tahoma;
+}
+
+article p + p {
+    margin-top: 10px;
 }
 
 .skills {
@@ -108,10 +113,14 @@ article .content-right{
     padding: 0;
 }
 
+.box-content h2, .box-content h3 {
+    margin: 0 0 10px 0;
+}
+
 .job-date {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 5px;
 }
 
 .box-content ul {
@@ -121,4 +130,66 @@ article .content-right{
 
 footer {
     text-align: center;
+}
+
+@media screen and (max-width: 960px) { 
+    
+    body {
+        padding: 0;
+    }
+    
+    .container {
+        padding: 10px;
+    }
+
+    .content-data,
+    .contact-info {
+        float: none;
+        text-align: center;
+    }
+    
+    .content-data img {
+        margin: 0;
+    }
+    
+    .content-me {
+        display: block;
+        margin: 20px 0;
+    }
+    
+    .link-doc {
+        position: static;
+    }
+
+    article > h2 {
+        position: relative;
+        width: auto;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    article .content-right {
+        margin: 0;
+    }
+    
+    .skills ul {
+        float: none;
+        width: auto;
+        list-style: disc;
+        margin-left: 20px;
+    }
+
+    .skills li {
+        border-bottom: none;
+        padding-right: 0;
+    }
+
+    .job-date {
+        position: static;
+        margin-bottom: 10px;
+    }
+
+    footer span {
+        white-space: nowrap;
+    }
 }
