--- a/profile/sass/fonts.scss
+++ b/profile/sass/fonts.scss
@@ -22,7 +22,7 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-size: 0;
-	color: #bbb;
+	color: #fff;
 }
 
 [class^="icon-"]:before, [class*=" icon-"]:before {
