--- a/profile/stylesheets/fonts.css
+++ b/profile/stylesheets/fonts.css
@@ -18,7 +18,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 0;
-  color: #bbb;
+  color: #fff;
 }
 
 /* line 28, ../sass/fonts.scss */
