--- a/profile/sass/styles.scss
+++ b/profile/sass/styles.scss
@@ -65,7 +65,6 @@ main {
 	right: 0;
 	overflow: scroll;
 	height: 100%;
-	width: 100%;
 }
 
 section {
@@ -131,6 +130,7 @@ section {
 
 .skills {
 	color: #fff;
+	padding-bottom: 50px;
 	padding-top: 50px;
 	/*height: 764px;*/
 	position: relative;
@@ -139,7 +139,8 @@ section {
 	background-size: cover;
 	
 	ul {
-	    margin-right: -25px;
+		margin-right: -3%;
+		margin-bottom: -3%;
 	}
 
     li {
@@ -147,14 +148,14 @@ section {
     	border: solid 2px #fff;
     	border-radius: 50%;
     	display: inline-block;
-    	margin: 0 2% 2% 0;
+    	margin: 0 3% 3% 0;
     	text-align: center;
     	vertical-align: middle;
     	cursor: default;
     	width: 14%;
     	box-sizing:border-box;
     	position: relative;
-		min-width: 100px;
+		min-width: 150px;
 		padding: 1%;
 		
 		&:hover {
@@ -177,6 +178,7 @@ section {
 			right: 0;
 			transform: translateY(-50%);
 			display: block;
+			font-size: 0.9em;
     	}
     }
 
@@ -201,78 +203,59 @@ section {
 	background: #D9B744;
 	padding-top: 50px;
 	padding-bottom: 50px;
-	min-height: 350px;
+	min-height: 300px;
+	color: #fff;
+	i {
+		position: absolute;
+	}
 
 	h2 {
 		color: #fff;
 	}
-
+	
 	ul {
+		text-align: center;
 		position: relative;
 	}
+	
 	li {
-    	border: solid 1px #fff;
-    	border-radius: 50%;
-    	display: inline-block;
-    	margin: 0 2% 2% 0;
-    	text-align: center;
-    	vertical-align: middle;
-    	padding: 1%;
-    	cursor: default;
-    	width: 10%;
-    	position: absolute;
-		
-		&:hover {
-    		/*background: rgba(256,256,256,0.5);*/
-    		/*border-color: rgba(102,102,102,1);*/
-    		/*font-weight: bold;*/
-    		/*color: rgba(102,102,102,0.8);*/
-		}
-		
-		&:first-child p + p {
-			text-indent: -15px;
-		}
 
-		&:nth-child(2) {
-			left: 40%;
-		}
+		position: absolute;
 
-		&:nth-child(3) {
-			right: 50px;
-			p + p {
-				text-indent: -30px;
+		i {
+			/*margin: auto;*/
+			width: 100px;
+			height: 100px;
+			border: solid 1px #fff;
+			display: block;
+			position: relative;
+			border-radius: 50%;
+			text-align: center;
+			margin-bottom: 20px;
+
+			&:before {
+				position: absolute;
+				left: 0;
+				right: 0;
+				top: 50%;
+				transform: translateY(-50%);
 			}
 		}
 
-		&:after {
-		    content: '';
-		    display: block;
-		    padding: 50% 0;
+		&:nth-child(2) {
+			/*position: static;*/
+			left: 50%;
+    		transform: translateX(-50%);
 		}
 
-		&:before {
-			position: absolute;
-			top: 50%;
-			left: 0;
+		&:nth-child(3) {
 			right: 0;
-			transform: translateY(-50%);
-			color: #fff;
+			top: 0;
+			p + p {
+				position: absolute;
+				text-indent: -50px;
+			}
 		}
-    }
-
-    p {
-		position: absolute;
-		font-size: 22px;
-		left: 0;
-		right: 0;
-		bottom: -40px;
-		color: #fff;
-    	white-space: nowrap;
-    }
-
-    p + p{
-		bottom: -70px;
-		font-size: 14px;
     }
 }
 
@@ -320,10 +303,42 @@ footer {
 	}
 
 	.home {
-		padding-top: 10%;
+		padding-top: 50px;
+		padding-bottom: 50px;
+		height: auto;
 	}
 
-	.skills li {
+	.skills ul {
+		text-align: center;
 
+		li {
+			margin: 0 10% 10% 0;
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+@media screen and (max-width: 480px) { 
+	.contact li {
+		position: static;
+		margin-bottom: 30px;
+		
+		&:nth-child(2) {
+			transform: initial;
+		}
+
+		&:nth-child(3) {
+			margin-bottom: 0;
+			p + p {
+				position: static;
+				text-indent: 0;
+			}
+		}
+
+		i {
+			margin: 0 auto 20px;
+		}
 	}
 }
