--- a/profile/stylesheets/styles.css
+++ b/profile/stylesheets/styles.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../../../../usr/local/rvm/gems/jruby-1.7.4/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../usr/local/rvm/gems/jruby-1.7.4/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../usr/local/rvm/gems/jruby-1.7.4/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../usr/local/rvm/gems/jruby-1.7.4/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../usr/local/rvm/gems/jruby-1.7.4/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../usr/local/rvm/gems/jruby-1.7.4/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../usr/local/rvm/gems/jruby-1.7.4/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../usr/local/rvm/gems/jruby-1.7.4/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../usr/local/rvm/gems/jruby-1.7.4/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -190,16 +190,15 @@ main {
   right: 0;
   overflow: scroll;
   height: 100%;
-  width: 100%;
 }
 
-/* line 71, ../sass/styles.scss */
+/* line 70, ../sass/styles.scss */
 section {
   padding: 0 50px;
   /*max-width: 800px;*/
 }
 
-/* line 76, ../sass/styles.scss */
+/* line 75, ../sass/styles.scss */
 .home {
   color: #fff;
   position: relative;
@@ -212,50 +211,51 @@ section {
   height: 100%;
   max-height: 600px;
 }
-/* line 90, ../sass/styles.scss */
+/* line 89, ../sass/styles.scss */
 .home h2 {
   font-size: 45px;
 }
-/* line 94, ../sass/styles.scss */
+/* line 93, ../sass/styles.scss */
 .home h5 {
   margin: 10px 0;
   font-size: 20px;
   font-weight: 400;
 }
-/* line 100, ../sass/styles.scss */
+/* line 99, ../sass/styles.scss */
 .home a + a {
   margin-left: 15px;
 }
 
-/* line 106, ../sass/styles.scss */
+/* line 105, ../sass/styles.scss */
 .resume {
   margin-top: 50px;
   margin-bottom: 50px;
   line-height: 1.6;
 }
-/* line 111, ../sass/styles.scss */
+/* line 110, ../sass/styles.scss */
 .resume .title-section {
   color: #000;
 }
-/* line 115, ../sass/styles.scss */
+/* line 114, ../sass/styles.scss */
 .resume h3 {
   font-size: 27px;
   color: #8C6115;
   margin-bottom: 45px;
 }
-/* line 122, ../sass/styles.scss */
+/* line 121, ../sass/styles.scss */
 .resume p {
   font-family: Tahoma;
   color: #999;
 }
-/* line 127, ../sass/styles.scss */
+/* line 126, ../sass/styles.scss */
 .resume p + p {
   margin-top: 15px;
 }
 
-/* line 132, ../sass/styles.scss */
+/* line 131, ../sass/styles.scss */
 .skills {
   color: #fff;
+  padding-bottom: 50px;
   padding-top: 50px;
   /*height: 764px;*/
   position: relative;
@@ -279,38 +279,39 @@ section {
 }
 /* line 141, ../sass/styles.scss */
 .skills ul {
-  margin-right: -25px;
+  margin-right: -3%;
+  margin-bottom: -3%;
 }
-/* line 145, ../sass/styles.scss */
+/* line 146, ../sass/styles.scss */
 .skills li {
   background: rgba(102, 102, 102, 0.8);
   border: solid 2px #fff;
   border-radius: 50%;
   display: inline-block;
-  margin: 0 2% 2% 0;
+  margin: 0 3% 3% 0;
   text-align: center;
   vertical-align: middle;
   cursor: default;
   width: 14%;
   box-sizing: border-box;
   position: relative;
-  min-width: 100px;
+  min-width: 150px;
   padding: 1%;
 }
-/* line 160, ../sass/styles.scss */
+/* line 161, ../sass/styles.scss */
 .skills li:hover {
   background: rgba(255, 255, 255, 0.5);
   border-color: #666666;
   font-weight: bold;
   color: rgba(102, 102, 102, 0.8);
 }
-/* line 167, ../sass/styles.scss */
+/* line 168, ../sass/styles.scss */
 .skills li:before {
   content: '';
   display: block;
   padding: 50% 0;
 }
-/* line 173, ../sass/styles.scss */
+/* line 174, ../sass/styles.scss */
 .skills li span {
   position: absolute;
   top: 50%;
@@ -318,107 +319,88 @@ section {
   right: 0;
   transform: translateY(-50%);
   display: block;
+  font-size: 0.9em;
 }
 
-/* line 200, ../sass/styles.scss */
+/* line 202, ../sass/styles.scss */
 .contact {
   background: #D9B744;
   padding-top: 50px;
   padding-bottom: 50px;
-  min-height: 350px;
+  min-height: 300px;
+  color: #fff;
 }
-/* line 206, ../sass/styles.scss */
+/* line 208, ../sass/styles.scss */
+.contact i {
+  position: absolute;
+}
+/* line 212, ../sass/styles.scss */
 .contact h2 {
   color: #fff;
 }
-/* line 210, ../sass/styles.scss */
+/* line 216, ../sass/styles.scss */
 .contact ul {
+  text-align: center;
   position: relative;
 }
-/* line 213, ../sass/styles.scss */
+/* line 221, ../sass/styles.scss */
 .contact li {
-  border: solid 1px #fff;
-  border-radius: 50%;
-  display: inline-block;
-  margin: 0 2% 2% 0;
-  text-align: center;
-  vertical-align: middle;
-  padding: 1%;
-  cursor: default;
-  width: 10%;
   position: absolute;
 }
 /* line 225, ../sass/styles.scss */
-.contact li:hover {
-  /*background: rgba(256,256,256,0.5);*/
-  /*border-color: rgba(102,102,102,1);*/
-  /*font-weight: bold;*/
-  /*color: rgba(102,102,102,0.8);*/
-}
-/* line 232, ../sass/styles.scss */
-.contact li:first-child p + p {
-  text-indent: -15px;
+.contact li i {
+  /*margin: auto;*/
+  width: 100px;
+  height: 100px;
+  border: solid 1px #fff;
+  display: block;
+  position: relative;
+  border-radius: 50%;
+  text-align: center;
+  margin-bottom: 20px;
 }
 /* line 236, ../sass/styles.scss */
-.contact li:nth-child(2) {
-  left: 40%;
-}
-/* line 240, ../sass/styles.scss */
-.contact li:nth-child(3) {
-  right: 50px;
-}
-/* line 242, ../sass/styles.scss */
-.contact li:nth-child(3) p + p {
-  text-indent: -30px;
-}
-/* line 247, ../sass/styles.scss */
-.contact li:after {
-  content: '';
-  display: block;
-  padding: 50% 0;
-}
-/* line 253, ../sass/styles.scss */
-.contact li:before {
+.contact li i:before {
   position: absolute;
+  left: 0;
+  right: 0;
   top: 50%;
-  left: 0;
-  right: 0;
   transform: translateY(-50%);
-  color: #fff;
 }
-/* line 263, ../sass/styles.scss */
-.contact p {
-  position: absolute;
-  font-size: 22px;
-  left: 0;
+/* line 245, ../sass/styles.scss */
+.contact li:nth-child(2) {
+  /*position: static;*/
+  left: 50%;
+  transform: translateX(-50%);
+}
+/* line 251, ../sass/styles.scss */
+.contact li:nth-child(3) {
   right: 0;
-  bottom: -40px;
-  color: #fff;
-  white-space: nowrap;
+  top: 0;
 }
-/* line 273, ../sass/styles.scss */
-.contact p + p {
-  bottom: -70px;
-  font-size: 14px;
+/* line 254, ../sass/styles.scss */
+.contact li:nth-child(3) p + p {
+  position: absolute;
+  text-indent: -50px;
 }
 
-/* line 279, ../sass/styles.scss */
+/* line 262, ../sass/styles.scss */
 footer {
   padding: 50px;
 }
-/* line 282, ../sass/styles.scss */
+/* line 265, ../sass/styles.scss */
 footer p {
   font-size: 21px;
 }
 
-/* line 287, ../sass/styles.scss */
+/* line 270, ../sass/styles.scss */
 .title-section {
   font-size: 32px;
   font-weight: bold;
   margin-bottom: 20px;
   letter-spacing: 0.12em;
 }
-/* line 293, ../sass/styles.scss */
+/* line 276, ../sass/styles.scss */
 .title-section:after {
   content: '';
   border-bottom: solid 5px #E6E6E6;
@@ -427,29 +409,68 @@ footer p {
   margin-top: 10px;
 }
 
-/* line 303, ../sass/styles.scss */
+/* line 286, ../sass/styles.scss */
 .icon-icon-li:hover {
   color: #297CB2;
 }
 
-/* line 307, ../sass/styles.scss */
+/* line 290, ../sass/styles.scss */
 .icon-icon-tw:hover {
   color: #63AEEB;
 }
 
 @media screen and (max-width: 960px) {
-  /* line 314, ../sass/styles.scss */
+  /* line 297, ../sass/styles.scss */
   .left-panel {
     display: none;
   }
 
-  /* line 318, ../sass/styles.scss */
+  /* line 301, ../sass/styles.scss */
   main {
     position: static;
   }
 
-  /* line 322, ../sass/styles.scss */
+  /* line 305, ../sass/styles.scss */
   .home {
-    padding-top: 10%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    height: auto;
+  }
+
+  /* line 311, ../sass/styles.scss */
+  .skills ul {
+    text-align: center;
+  }
+  /* line 314, ../sass/styles.scss */
+  .skills ul li {
+    margin: 0 10% 10% 0;
+  }
+  /* line 317, ../sass/styles.scss */
+  .skills ul li:last-child {
+    margin-bottom: 0;
+  }
+}
+@media screen and (max-width: 480px) {
+  /* line 324, ../sass/styles.scss */
+  .contact li {
+    position: static;
+    margin-bottom: 30px;
+  }
+  /* line 328, ../sass/styles.scss */
+  .contact li:nth-child(2) {
+    transform: initial;
+  }
+  /* line 332, ../sass/styles.scss */
+  .contact li:nth-child(3) {
+    margin-bottom: 0;
+  }
+  /* line 334, ../sass/styles.scss */
+  .contact li:nth-child(3) p + p {
+    position: static;
+    text-indent: 0;
+  }
+  /* line 340, ../sass/styles.scss */
+  .contact li i {
+    margin: 0 auto 20px;
   }
 }
