--- a/profile/stylesheets/styles.css
+++ b/profile/stylesheets/styles.css
@@ -368,39 +368,43 @@ section {
   transform: translateY(-50%);
 }
 /* line 245, ../sass/styles.scss */
+.contact li:first-child {
+  left: 50px;
+}
+/* line 249, ../sass/styles.scss */
 .contact li:nth-child(2) {
   /*position: static;*/
   left: 50%;
   transform: translateX(-50%);
 }
-/* line 251, ../sass/styles.scss */
-.contact li:nth-child(3) {
-  right: 0;
+/* line 255, ../sass/styles.scss */
+.contact li:last-child {
+  right: 50px;
   top: 0;
 }
-/* line 254, ../sass/styles.scss */
-.contact li:nth-child(3) p + p {
+/* line 258, ../sass/styles.scss */
+.contact li:last-child p + p {
   position: absolute;
   text-indent: -50px;
 }
 
-/* line 262, ../sass/styles.scss */
+/* line 266, ../sass/styles.scss */
 footer {
   padding: 50px;
 }
-/* line 265, ../sass/styles.scss */
+/* line 269, ../sass/styles.scss */
 footer p {
   font-size: 21px;
 }
 
-/* line 270, ../sass/styles.scss */
+/* line 274, ../sass/styles.scss */
 .title-section {
   font-size: 32px;
   font-weight: bold;
   margin-bottom: 20px;
   letter-spacing: 0.12em;
 }
-/* line 276, ../sass/styles.scss */
+/* line 280, ../sass/styles.scss */
 .title-section:after {
   content: '';
   border-bottom: solid 5px #E6E6E6;
@@ -409,67 +413,67 @@ footer p {
   margin-top: 10px;
 }
 
-/* line 286, ../sass/styles.scss */
+/* line 290, ../sass/styles.scss */
 .icon-icon-li:hover {
   color: #297CB2;
 }
 
-/* line 290, ../sass/styles.scss */
+/* line 294, ../sass/styles.scss */
 .icon-icon-tw:hover {
   color: #63AEEB;
 }
 
 @media screen and (max-width: 960px) {
-  /* line 297, ../sass/styles.scss */
+  /* line 301, ../sass/styles.scss */
   .left-panel {
     display: none;
   }
 
-  /* line 301, ../sass/styles.scss */
+  /* line 305, ../sass/styles.scss */
   main {
     position: static;
   }
 
-  /* line 305, ../sass/styles.scss */
+  /* line 309, ../sass/styles.scss */
   .home {
     padding-top: 50px;
     padding-bottom: 50px;
     height: auto;
   }
 
-  /* line 311, ../sass/styles.scss */
+  /* line 315, ../sass/styles.scss */
   .skills ul {
     text-align: center;
   }
-  /* line 314, ../sass/styles.scss */
+  /* line 318, ../sass/styles.scss */
   .skills ul li {
     margin: 0 10% 10% 0;
   }
-  /* line 317, ../sass/styles.scss */
+  /* line 321, ../sass/styles.scss */
   .skills ul li:last-child {
     margin-bottom: 0;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 324, ../sass/styles.scss */
+  /* line 328, ../sass/styles.scss */
   .contact li {
     position: static;
     margin-bottom: 30px;
   }
-  /* line 328, ../sass/styles.scss */
+  /* line 332, ../sass/styles.scss */
   .contact li:nth-child(2) {
     transform: initial;
   }
-  /* line 332, ../sass/styles.scss */
+  /* line 336, ../sass/styles.scss */
   .contact li:nth-child(3) {
     margin-bottom: 0;
   }
-  /* line 334, ../sass/styles.scss */
+  /* line 338, ../sass/styles.scss */
   .contact li:nth-child(3) p + p {
     position: static;
     text-indent: 0;
   }
-  /* line 340, ../sass/styles.scss */
+  /* line 344, ../sass/styles.scss */
   .contact li i {
     margin: 0 auto 20px;
   }
