--- a/profile/sass/styles.scss
+++ b/profile/sass/styles.scss
@@ -223,7 +223,7 @@ section {
 		position: absolute;
 
 		i {
-			/*margin: auto;*/
+			margin: auto;
 			width: 100px;
 			height: 100px;
 			border: solid 1px #fff;
