--- a/profile/src/stylesheets/styles.css
+++ b/profile/src/stylesheets/styles.css
@@ -218,7 +218,7 @@ section {
 }
 /* line 94, ../sass/styles.scss */
 .home h5 {
-  margin: 10px 0;
+  margin: 0 0 10px 0;
   font-size: 20px;
   font-weight: 400;
 }
