profile site updates

--- a/profile/src/sass/fonts.scss
+++ b/profile/src/sass/fonts.scss
@@ -44,3 +44,13 @@
 .icon-icon-mail:before {
 	content: "\e600";
 }
+.icon-icon-profile:before {
+	content: "\e923";
+}
+
+.icon-icon-github:before {
+	content: "\e602";
+	background-color: #fff;
+	color: rgba(239,185,114,1);
+	border-radius: 5px;
+}
