--- a/profile/src/stylesheets/styles.css
+++ b/profile/src/stylesheets/styles.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -299,7 +299,8 @@ section {
 /* line 147, ../sass/styles.scss */
 .skills li {
   background: rgba(102, 102, 102, 0.8);
-  border: solid 2px #fff;
+  background-clip: padding-box;
+  border: solid 10px rgba(255, 255, 255, 0.4);
   border-radius: 50%;
   display: inline-block;
   margin: 0 3% 3% 0;
@@ -311,21 +312,28 @@ section {
   position: relative;
   min-width: 150px;
   padding: 1%;
+  vertical-align: top;
+  transition: transform 0.5s ease-out;
 }
-/* line 162, ../sass/styles.scss */
-.skills li:hover {
-  background: rgba(255, 255, 255, 0.5);
-  border-color: #666666;
+/* line 165, ../sass/styles.scss */
+.skills li:hover, .skills li.animation {
+  background: rgba(255, 255, 255, 0.4);
+  background-clip: padding-box;
+  border-color: rgba(102, 102, 102, 0.4);
   font-weight: bold;
-  color: rgba(102, 102, 102, 0.8);
+  transform: perspective(200px) rotateY(180deg);
 }
-/* line 169, ../sass/styles.scss */
+/* line 173, ../sass/styles.scss */
+.skills li:hover span, .skills li.animation span {
+  transform: translateY(-50%) rotateY(-180deg) perspective(600px);
+}
+/* line 179, ../sass/styles.scss */
 .skills li:before {
   content: '';
   display: block;
   padding: 50% 0;
 }
-/* line 175, ../sass/styles.scss */
+/* line 185, ../sass/styles.scss */
 .skills li span {
   position: absolute;
   top: 50%;
@@ -336,7 +344,7 @@ section {
   font-size: 0.9em;
 }
 
-/* line 203, ../sass/styles.scss */
+/* line 213, ../sass/styles.scss */
 .contact {
   background: #D9B744;
   padding-top: 50px;
@@ -344,24 +352,24 @@ section {
   min-height: 300px;
   color: #fff;
 }
-/* line 209, ../sass/styles.scss */
+/* line 219, ../sass/styles.scss */
 .contact i {
   position: absolute;
 }
-/* line 213, ../sass/styles.scss */
+/* line 223, ../sass/styles.scss */
 .contact h2 {
   color: #fff;
 }
-/* line 217, ../sass/styles.scss */
+/* line 227, ../sass/styles.scss */
 .contact ul {
   text-align: center;
   position: relative;
 }
-/* line 222, ../sass/styles.scss */
+/* line 232, ../sass/styles.scss */
 .contact li {
   position: absolute;
 }
-/* line 226, ../sass/styles.scss */
+/* line 236, ../sass/styles.scss */
 .contact li i {
   margin: auto;
   width: 100px;
@@ -373,7 +381,7 @@ section {
   text-align: center;
   margin-bottom: 20px;
 }
-/* line 237, ../sass/styles.scss */
+/* line 247, ../sass/styles.scss */
 .contact li i:before {
   position: absolute;
   left: 0;
@@ -381,44 +389,44 @@ section {
   top: 50%;
   transform: translateY(-50%);
 }
-/* line 246, ../sass/styles.scss */
+/* line 256, ../sass/styles.scss */
 .contact li:first-child {
   left: 50px;
 }
-/* line 250, ../sass/styles.scss */
+/* line 260, ../sass/styles.scss */
 .contact li:nth-child(2) {
   /*position: static;*/
   left: 50%;
   transform: translateX(-50%);
 }
-/* line 256, ../sass/styles.scss */
+/* line 266, ../sass/styles.scss */
 .contact li:last-child {
   right: 50px;
   top: 0;
 }
-/* line 259, ../sass/styles.scss */
+/* line 269, ../sass/styles.scss */
 .contact li:last-child p + p {
   position: absolute;
   text-indent: -50px;
 }
 
-/* line 267, ../sass/styles.scss */
+/* line 277, ../sass/styles.scss */
 footer {
   padding: 50px;
 }
-/* line 270, ../sass/styles.scss */
+/* line 280, ../sass/styles.scss */
 footer p {
   font-size: 21px;
 }
 
-/* line 275, ../sass/styles.scss */
+/* line 285, ../sass/styles.scss */
 .title-section {
   font-size: 32px;
   font-weight: bold;
   margin-bottom: 20px;
   letter-spacing: 0.12em;
 }
-/* line 281, ../sass/styles.scss */
+/* line 291, ../sass/styles.scss */
 .title-section:after {
   content: '';
   border-bottom: solid 5px #E6E6E6;
@@ -427,53 +435,53 @@ footer p {
   margin-top: 10px;
 }
 
-/* line 291, ../sass/styles.scss */
+/* line 301, ../sass/styles.scss */
 .icon-icon-li:hover {
   color: #297CB2;
 }
 
-/* line 295, ../sass/styles.scss */
+/* line 305, ../sass/styles.scss */
 .icon-icon-tw:hover {
   color: #63AEEB;
 }
 
-/* line 299, ../sass/styles.scss */
+/* line 309, ../sass/styles.scss */
 .icon-icon-github:hover:before {
   background: #000;
 }
 
-/* line 303, ../sass/styles.scss */
+/* line 313, ../sass/styles.scss */
 .icon-icon-profile:hover {
   color: #666;
 }
 
 @media screen and (max-width: 960px) {
-  /* line 309, ../sass/styles.scss */
+  /* line 319, ../sass/styles.scss */
   body {
     overflow: auto;
   }
 
-  /* line 313, ../sass/styles.scss */
+  /* line 323, ../sass/styles.scss */
   .left-panel {
     width: auto;
     padding: 20px 10px;
     position: static;
     height: auto;
   }
-  /* line 319, ../sass/styles.scss */
+  /* line 329, ../sass/styles.scss */
   .left-panel header {
     margin: 0;
   }
-  /* line 323, ../sass/styles.scss */
+  /* line 333, ../sass/styles.scss */
   .left-panel .main-nav {
     margin-top: 20px;
   }
-  /* line 326, ../sass/styles.scss */
+  /* line 336, ../sass/styles.scss */
   .left-panel .main-nav a {
     display: inline-block;
     margin-bottom: 0;
   }
-  /* line 332, ../sass/styles.scss */
+  /* line 342, ../sass/styles.scss */
   .left-panel.fixed {
     position: fixed;
     z-index: 1;
@@ -481,19 +489,19 @@ footer p {
     right: 0;
     top: -165px;
   }
-  /* line 339, ../sass/styles.scss */
+  /* line 349, ../sass/styles.scss */
   .left-panel.fixed + main {
     margin-top: 217px;
   }
 
-  /* line 345, ../sass/styles.scss */
+  /* line 355, ../sass/styles.scss */
   main {
     position: static;
     overflow: auto;
     height: auto;
   }
 
-  /* line 351, ../sass/styles.scss */
+  /* line 361, ../sass/styles.scss */
   .home {
     padding-top: 50px;
     padding-bottom: 50px;
@@ -501,39 +509,48 @@ footer p {
     min-height: auto;
   }
 
-  /* line 358, ../sass/styles.scss */
+  /* line 368, ../sass/styles.scss */
   .skills ul {
     text-align: center;
   }
-  /* line 361, ../sass/styles.scss */
+  /* line 371, ../sass/styles.scss */
   .skills ul li {
     margin: 0 10% 10% 0;
   }
-  /* line 364, ../sass/styles.scss */
+  /* line 374, ../sass/styles.scss */
   .skills ul li:last-child {
     margin-bottom: 0;
   }
+
+  /* line 381, ../sass/styles.scss */
+  .contact li:first-child {
+    left: 0;
+  }
+  /* line 385, ../sass/styles.scss */
+  .contact li:last-child {
+    right: 15px;
+  }
 }
 @media screen and (max-width: 480px) {
-  /* line 372, ../sass/styles.scss */
+  /* line 392, ../sass/styles.scss */
   .contact li {
     position: static;
     margin-bottom: 30px;
   }
-  /* line 376, ../sass/styles.scss */
+  /* line 396, ../sass/styles.scss */
   .contact li:nth-child(2) {
     transform: initial;
   }
-  /* line 380, ../sass/styles.scss */
+  /* line 400, ../sass/styles.scss */
   .contact li:nth-child(3) {
     margin-bottom: 0;
   }
-  /* line 382, ../sass/styles.scss */
+  /* line 402, ../sass/styles.scss */
   .contact li:nth-child(3) p + p {
     position: static;
     text-indent: 0;
   }
-  /* line 388, ../sass/styles.scss */
+  /* line 408, ../sass/styles.scss */
   .contact li i {
     margin: 0 auto 20px;
   }
